
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added modUser::joinGroup(group,(optional)role) and modUser::leaveGroup(group) for easier development 
- Optimized getrecentlyeditedresources processor
- Make sure config.js.php outputs proper headers
- Commented out Content-Length headers on lang.js.php, for some reason was slowing down servers
- [#MODX-1256] Fixed issue with Resource tree not being visible in Resource Groups page
- Fixed issues with Import HTML/Resources pages; properly convert to MODExt
- [#MODX-1202] Fixed issue where Element name was missing in Duplicate window
- [#MODX-1233] Fixed bug where categories could only be renamed once before needing to reload page
- [#MODX-1248] Fix bug that could wipe TV values if tab wasnt loaded
- [#MODX-1241] Fixed Preview button on update panels
- Prettying up of TV fields
- Now display SVN revision number with version in top left of mgr header
- Fixed issues with TVs setting values incorrectly
- Added "Set to Default" button on TVs that will reset the TV's value to it's default value. TV Resource values can now be set to blank as a valid value.
- [#MODX-924] Fixed errors in various system setting descriptions
- [#MODX-935] Tooltips in Resource tree now do not show if no description or longtitle is set
- [#MODX-1120] Now shows TV names in tag form below the caption in the TV editing panel in Resource editing 
- Fixes to plugin event calls in controllers
- Fixes to filetree to enable in Ext3
- [#MODX-1112] Fixed issue where checkboxes in grids werent firing dirty statuses
- [#MODX-1229] Fixed issue where default hidemenu setting in Create Static Resource was setting incorrectly to true