@@ -4,6 +4,9 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Removed some legacy todo statements
+- Moved Element category reset on modCategory object remove to modCategory class
+- Cleaned up modResourceGroup, modTemplate helper methods
 - Added modUser::joinGroup(group,(optional)role) and modUser::leaveGroup(group) for easier development 
 - Optimized getrecentlyeditedresources processor
 - Make sure config.js.php outputs proper headers
